4.0.14
 * Improve accuracy of memtable heap usage tracking (CASSANDRA-17298)
 * Fix rendering UNSET collection types in query tracing (CASSANDRA-19880)
 * Fix latency reported by ideal consistency level monitoring (CASSANDRA-19651)
 * Use default commitlog settings in test YAMLs (CASSANDRA-19830)
 * Do not spam log with SSLExceptions (CASSANDRA-18839)
 * Fix schema.cql created by a snapshot after dropping more than one column (CASSANDRA-19747)
 * UnsupportedOperationException when reducing scope for LCS compactions (CASSANDRA-19704)
 * Make LWT conditions behavior on frozen and non-frozen columns consistent for null column values (CASSANDRA-19637)
 * Add timeout specifically for bootstrapping nodes (CASSANDRA-15439)
 * Bring Redhat package dirs/ownership/perms in line with Debian package (CASSANDRA-19565)
Merged from 3.0:
 * Upgrade OWASP to 10.0.0 (CASSANDRA-19738)


4.0.13
 * Make nodetool import congruent with the documentation by not relying on the folder structure of the imported SSTable files (CASSANDRA-19401)
 * IR may leak SSTables with pending repair when coming from streaming (CASSANDRA-19182)
 * Streaming exception race creates corrupt transaction log files that prevent restart (CASSANDRA-18736)
 * Fix CQL tojson timestamp output on negative timestamp values before Gregorian calendar reform in 1582 (CASSANDRA-19566)
 * Fix few types issues and implement types compatibility tests (CASSANDRA-19479)
 * Optionally avoid hint transfer during decommission (CASSANDRA-19525)
 * Change logging to TRACE when failing to get peer certificate (CASSANDRA-19508)
 * Push LocalSessions info logs to debug (CASSANDRA-18335)
 * Filter remote DC replicas out when constructing the initial replica plan for the local read repair (CASSANDRA-19120)
 * Remove redundant code in StorageProxy#sendToHintedReplicas (CASSANDRA-19412)
 * Remove bashisms for mx4j tool in cassandra-env.sh (CASSANDRA-19416)